@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0030 :
+* Trader blocks show the trader. Helper block for random trader.
+
 A21.2.001.0029 :
 * Trader Offsets, tinted vehicles.
 
